<resources>
    <string name="app_name">Store Inventory</string>
    <string name="action_settings">Settings</string>

    <string name="action_insert_generic_entry">Insert generic inventory item</string>
    <string name="action_save">Save</string>

    <string name = "add_inventory_item_activity_title">Add An Inventory Item</string>

    <string name="category_product">Product</string>

    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>

    <string name="category_supplier">Supplier</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone_number">Phone number</string>
    
    <string name="Sale">Sale</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no items in the inventory.</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding an item.</string>

    <string name="editor_activity_title_new_item">Add Item</string>
    <string name="editor_activity_title_display_item">Display Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="editor_insert_item_success">Item saved</string>
    <string name="editor_insert_item_fail">Error with saving item</string>

    <string name="editor_update_item_success">Item updated</string>
    <string name="editor_update_item_fail">Error with updating item</string>


    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="price_header">Price: </string>
    <string name="quantity_header">Quantity: </string>

    <string name="action_delete_all_entries">Delete all items</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>

    <string name="editor_delete_item_failed">Edit item failed</string>
    <string name="editor_delete_item_success">Edit item successful.</string>

    <string name="editor_decrease_quantity_failed">Decrease Quantity Failed</string>

    <string name="call">Call</string>
    <string name="save_fail_empty_fields">Save failed. Must have all fields populated.</string>

    <string name="sale_failed">Sale failed.</string>
    <string name="sale_success">Sale was successful.</string>

    <string name="delete_item_confirmation">Are you sure you want to delete item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="delete_all_item_confirmation">Are you sure you want to delete all items?</string>
</resources>