<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditInventoryItemActivity">

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/round_done_white_24"
        app:showAsAction="always" />

    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/round_create_white_24"
        app:showAsAction="always" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/round_delete_white_24"
        app:showAsAction="always" />

</menu>