<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".EditInventoryItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Label -->
        <TextView
            android:text="@string/category_product"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:id="@+id/edit_productFields"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_productName"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_productPrice"
                android:hint="@string/hint_product_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />
            <EditText
                android:id="@+id/edit_productQuantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

        <!-- Display fields -->
        <LinearLayout
            android:id="@+id/display_productFields"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/display_productName"
                android:hint="@string/hint_product_name"
                android:padding="9dp"
                style="@style/EditorFieldStyle" />
            <TextView
                android:id="@+id/display_productPrice"
                android:hint="@string/hint_product_price"
                android:padding="9dp"
                style="@style/EditorFieldStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_weight="1"
                    android:onClick="decreaseQuantity"
                    android:text="-"
                    style="@style/ButtonStyle"/>

                <TextView
                    android:id="@+id/display_productQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/hint_product_quantity"
                    android:padding="9dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                <Button
                    android:onClick="increaseQuantity"
                    android:layout_weight="1"
                    android:text="+"
                    style="@style/ButtonStyle"/>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Label -->
        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:id="@+id/edit_supplierFields"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_supplierName"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_supplierPhoneNumber"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="textCapWords|phone" />
        </LinearLayout>
        <!-- Display fields -->
        <LinearLayout
            android:id="@+id/display_supplierFields"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/display_supplierName"
                android:hint="@string/hint_supplier_name"
                android:padding="9dp"
                style="@style/EditorFieldStyle" />
            <TextView
                android:id="@+id/display_supplierPhone"
                android:hint="@string/hint_supplier_phone_number"
                android:padding="9dp"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>
    

</LinearLayout>
